--- a/src/main/resources/templates/menu/add.html
+++ b/src/main/resources/templates/menu/add.html
@@ -11,7 +11,7 @@
         <form method="post" style="max-width:600px;" th:object="${menu}">
 
             <div class="form-group">
-                <label th:for="category">Menu</label>
+                <label th:for="menu">Menu</label>
                 <input class="form-control" th:field="*{name}" />
                 <span th:errors="*{name}" class="error"></span>
             </div>
