--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -8,15 +8,15 @@
 
         <nav th:replace="fragments :: navigation"></nav>
 
-        <p th:unless="${menus} and ${menus.size()}">no menus :(</p>
+        <ul th:each="cheese : ${menu.cheeses}">
 
-        <ul th:each="menu : ${menus}">
-            <li th:text="menu"><a href="'/menu/view/' + ${menu.id}"></a></li>
+            <li th:text="${cheese}"></li>
+
         </ul>
 
-       <p>
-           <a href="/menu/add">Add Menu</a>
-       </p>
+        <p>
+            <a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a>
+        </p>
 
 </body>
 </html>
