--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -10,7 +10,7 @@
 
         <ul th:each="cheese : ${menu.cheeses}">
 
-            <li th:text="${cheese}"></li>
+            <li th:text="${cheese.name}"></li>
 
         </ul>
 
