--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -13,7 +13,7 @@
     <div class="form-group">
     <label th:for="category">Category</label>
     <input class="form-control" th:field="${category.name}" />
-    <span th:errors="${category}" class="error"></span>
+    <span th:errors="${category.name}" class="error"></span>
     </div>
     <input type="submit" value="Add Category"/>
 
